# Cadera

./: .clang-format  .gitignore  CADRender.cpp  CADRender.hpp  CMakeLists.txt  CMakePresets.json  Cadera.cpp  Cadera.hpp  Camera.cpp  Camera.hpp  Feature.cpp  Feature.hpp  LICENSE.txt  Main.cpp  Model.cpp  Model.hpp  Point.cpp  Point.hpp  README.md  Relation.hpp  RenderUtil.hpp  Selection.cpp  Selection.hpp  Sketch.cpp  Sketch.hpp  SketchSolver.cpp  SketchSolver.hpp  Sketcher.hpp  TextRender.cpp  TextRender.hpp  callbacks.cpp  callbacks.hpp  grid_vertex.vert  gridvertex.vert  gui.cpp  gui.hpp  imgui.ini  pch.hpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: Test.yml  build.yml
doc/pages/: ProjectPlan.md  Sketch.md
doc/visuals/grid/: grid.py
include/: CADRender.hpp  Cadera.hpp  Camera.hpp  Canvas.hpp  Model.hpp  Point.hpp  RenderUtil.hpp  Selection.hpp  Sketch.hpp  Sketcher.hpp  callbacks.hpp  grid.hpp  gui.hpp  pch.hpp
shaders/: compile.bat  compile_shaders.bat  compile_shaders.sh  gridvert.spv  gridvertex.vert  text.frag  text.vert  vert.spv
src/: CADRender.cpp  Cadera.cpp  Cadera.hpp  Camera.cpp  Canvas.cpp  Events.cpp  Events.hpp  Feature.cpp  Main.cpp  Model.cpp  Model.hpp  Relation.cpp  RenderUtil.cpp  Selection.cpp  Selection.hpp  Sketch.cpp  Sketcher.cpp  TextRender.cpp  cadera.cpp  cadera.hpp  callbacks.cpp  callbacks.hpp  config.hpp.in  grid.cpp  gui.cpp  main.cpp  pch.hpp  selection.cpp  selection.hpp
src/input/: CMakeLists.txt  cameracommands.hpp  command.hpp  input.cpp  keyboard.hpp  mouse.cpp  rendercommands.cpp  sketchcommands.cpp  sketchcommands.hpp
src/render/: CADRender.cpp  CADRender.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  RenderUtil.cpp  RenderUtil.hpp  TextRender.cpp  TextRender.hpp  cadrender.cpp  cadrender.hpp  camera.cpp  camera.hpp  grid.hpp
src/sketch/: CMakeLists.txt  Feature.cpp  Feature.hpp  Model.cpp  Model.hpp  Point.cpp  Point.hpp  Relation.cpp  Relation.hpp  Sketch.cpp  Sketch.hpp  SketchSolver.cpp  SketchSolver.hpp  Sketcher.cpp  Sketcher.hpp  feature.cpp  feature.hpp  grid.cpp  grid.hpp  model.cpp  model.hpp  observer.cpp  observer.hpp  pch.hpp  point.cpp  point.hpp  relation.cpp  sketch.cpp  sketch.hpp  sketcher.cpp  sketcher.hpp  sketchsolver.cpp  sketchsolver.hpp  subject.cpp  subject.hpp
src/text/: CMakeLists.txt  TextRender.cpp  TextRender.hpp  pch.hpp  textrender.cpp  textrender.hpp
src/ux/: CMakeLists.txt  Nodes.cpp  Nodes.hpp  gui.cpp  gui.hpp
src/ux/actions/: action.cpp  action.hpp  action_queue.cpp  action_queue.hpp
src/ux/command/: cameracommands.cpp  cameracommands.hpp  command.cpp  command.hpp  input.cpp  input.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  rendercommands.cpp  rendercommands.hpp  sketchcommands.cpp  sketchcommands.hpp
test/: CMakeLists.txt  pch.hpp  test_camera.cpp  test_input.cpp  test_render.cpp  test_sketch.cpp  test_text.cpp  tester.cpp
textures/: Relations.xcf  test.csv
